@@ -960,8 +960,6 @@ gint	    g_hash_table_foreach_remove	(GHashTable	*hash_table,
 					 GHRFunc	 func,
 					 gpointer	 user_data);
 gint	    g_hash_table_size		(GHashTable	*hash_table);
-void	    g_hash_table_set_key_freefunc (GHashTable	*hash_table,
-					 GFreeFunc	*free_func);
 
 
 /* Caches
